--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ authors = [
 requires-python = ">=3.13"
 dependencies = [
     "beautifulsoup4>=4.14.3",
+    "curl-cffi>=0.7.0",
     "duckdb>=1.2.0",
+    "loguru>=0.7.3",
     "lxml>=6.0.2",
     "openpyxl>=3.1.5",
     "paddleocr>=3.4.0",
@@ -20,6 +22,8 @@ dependencies = [
     "qrcode>=8.2",
     "requests>=2.32.5",
     "textual>=3.1.0",
+    "textual-plotext>=0.2.1",
+    "yfinance>=0.2.40",
 ]
 
 [project.scripts]
